prevent header from hiding when keyboard is active on mobile for username change

--- a/webroot/styles/app.css
+++ b/webroot/styles/app.css
@@ -202,10 +202,10 @@ header {
 }
 
 @media screen and (max-height: 500px) {
-  .single-col.touch-screen {
+  .single-col.touch-screen:not(.touch-keyboard-active) {
     --header-height: 0px;
   }
-  .single-col.touch-screen header {
+  .single-col.touch-screen:not(.touch-keyboard-active) header {
     display: none;
   }
 }
